--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#fafafa</color>
     <color name="colorPrimaryDark">#f0f0f0</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorShape">#dbdbdb</color>
 </resources>
