--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#f0f0f0</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorShape">#dbdbdb</color>
+    <color name="colorItem">#000000</color>
 </resources>
