--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#fafafa</color>
     <color name="colorPrimaryDark">#f0f0f0</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#229CC3</color>
     <color name="colorShape">#dbdbdb</color>
     <color name="colorItem">#000000</color>
     <color name="colorBlack">#000</color>
